package com.example.attendancesystem.grpc.service;

import com.example.attendancesystem.grpc.menu.*;
import io.grpc.Status;
import io.grpc.stub.StreamObserver;
import net.devh.boot.grpc.server.service.GrpcService;
import org.slf4j.Logger;
import org.slf4j.LoggerFactory;

/**
 * Menu Service Implementation for gRPC
 * Currently provides placeholder implementations for all menu management operations
 * This service will be fully implemented when menu management functionality is added to the system
 */
@GrpcService
public class MenuServiceImpl extends MenuServiceGrpc.MenuServiceImplBase {

    private static final Logger logger = LoggerFactory.getLogger(MenuServiceImpl.class);

    @Override
    public void createCategory(CreateCategoryRequest request, StreamObserver<CategoryResponse> responseObserver) {
        logger.info("Menu service - createCategory called for: {}", request.getName());
        
        try {
            // TODO: Implement category creation when menu models are added
            CategoryResponse response = CategoryResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Menu service not implemented yet - category creation pending")
                    .build();
            
            responseObserver.onNext(response);
            responseObserver.onCompleted();
            
        } catch (Exception e) {
            logger.error("Error in createCategory", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to create category: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void getCategory(GetCategoryRequest request, StreamObserver<CategoryResponse> responseObserver) {
        logger.info("Menu service - getCategory called for ID: {}", request.getId());
        
        try {
            CategoryResponse response = CategoryResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Menu service not implemented yet - category retrieval pending")
                    .build();
            
            responseObserver.onNext(response);
            responseObserver.onCompleted();
            
        } catch (Exception e) {
            logger.error("Error in getCategory", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to get category: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void updateCategory(UpdateCategoryRequest request, StreamObserver<CategoryResponse> responseObserver) {
        logger.info("Menu service - updateCategory called for ID: {}", request.getId());
        
        try {
            CategoryResponse response = CategoryResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Menu service not implemented yet - category update pending")
                    .build();
            
            responseObserver.onNext(response);
            responseObserver.onCompleted();
            
        } catch (Exception e) {
            logger.error("Error in updateCategory", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to update category: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void deleteCategory(DeleteCategoryRequest request, StreamObserver<DeleteResponse> responseObserver) {
        logger.info("Menu service - deleteCategory called for ID: {}", request.getId());
        
        try {
            DeleteResponse response = DeleteResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Menu service not implemented yet - category deletion pending")
                    .build();
            
            responseObserver.onNext(response);
            responseObserver.onCompleted();
            
        } catch (Exception e) {
            logger.error("Error in deleteCategory", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to delete category: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void listCategories(ListCategoriesRequest request, StreamObserver<ListCategoriesResponse> responseObserver) {
        logger.info("Menu service - listCategories called for organization: {}", request.getOrganizationId());
        
        try {
            ListCategoriesResponse response = ListCategoriesResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Menu service not implemented yet - category listing pending")
                    .setTotalCount(0)
                    .setPage(request.getPage())
                    .setSize(request.getSize())
                    .build();
            
            responseObserver.onNext(response);
            responseObserver.onCompleted();
            
        } catch (Exception e) {
            logger.error("Error in listCategories", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to list categories: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void createItem(CreateItemRequest request, StreamObserver<ItemResponse> responseObserver) {
        logger.info("Menu service - createItem called for: {}", request.getName());

        try {
            ItemResponse response = ItemResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Menu service not implemented yet - item creation pending")
                    .build();

            responseObserver.onNext(response);
            responseObserver.onCompleted();

        } catch (Exception e) {
            logger.error("Error in createItem", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to create item: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void getItem(GetItemRequest request, StreamObserver<ItemResponse> responseObserver) {
        logger.info("Menu service - getItem called for ID: {}", request.getId());

        try {
            ItemResponse response = ItemResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Menu service not implemented yet - item retrieval pending")
                    .build();

            responseObserver.onNext(response);
            responseObserver.onCompleted();

        } catch (Exception e) {
            logger.error("Error in getItem", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to get item: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void updateItem(UpdateItemRequest request, StreamObserver<ItemResponse> responseObserver) {
        logger.info("Menu service - updateItem called for ID: {}", request.getId());

        try {
            ItemResponse response = ItemResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Menu service not implemented yet - item update pending")
                    .build();

            responseObserver.onNext(response);
            responseObserver.onCompleted();

        } catch (Exception e) {
            logger.error("Error in updateItem", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to update item: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void deleteItem(DeleteItemRequest request, StreamObserver<DeleteResponse> responseObserver) {
        logger.info("Menu service - deleteItem called for ID: {}", request.getId());

        try {
            DeleteResponse response = DeleteResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Menu service not implemented yet - item deletion pending")
                    .build();

            responseObserver.onNext(response);
            responseObserver.onCompleted();

        } catch (Exception e) {
            logger.error("Error in deleteItem", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to delete item: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void listItems(ListItemsRequest request, StreamObserver<ListItemsResponse> responseObserver) {
        logger.info("Menu service - listItems called for organization: {}", request.getOrganizationId());

        try {
            ListItemsResponse response = ListItemsResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Menu service not implemented yet - item listing pending")
                    .setTotalCount(0)
                    .setPage(request.getPage())
                    .setSize(request.getSize())
                    .build();

            responseObserver.onNext(response);
            responseObserver.onCompleted();

        } catch (Exception e) {
            logger.error("Error in listItems", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to list items: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void getPublicMenu(GetPublicMenuRequest request, StreamObserver<PublicMenuResponse> responseObserver) {
        logger.info("Menu service - getPublicMenu called for organization: {}", request.getOrganizationId());
        
        try {
            PublicMenuResponse response = PublicMenuResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Menu service not implemented yet - public menu retrieval pending")
                    .build();
            
            responseObserver.onNext(response);
            responseObserver.onCompleted();
            
        } catch (Exception e) {
            logger.error("Error in getPublicMenu", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to get public menu: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void listItemsByCategory(ListItemsByCategoryRequest request, StreamObserver<ListItemsResponse> responseObserver) {
        logger.info("Menu service - listItemsByCategory called for category: {}", request.getCategoryId());

        try {
            ListItemsResponse response = ListItemsResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Menu service not implemented yet - items by category listing pending")
                    .setTotalCount(0)
                    .setPage(request.getPage())
                    .setSize(request.getSize())
                    .build();

            responseObserver.onNext(response);
            responseObserver.onCompleted();

        } catch (Exception e) {
            logger.error("Error in listItemsByCategory", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to list items by category: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void getPublicCategory(GetPublicCategoryRequest request, StreamObserver<CategoryResponse> responseObserver) {
        logger.info("Menu service - getPublicCategory called for ID: {}", request.getId());

        try {
            CategoryResponse response = CategoryResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Menu service not implemented yet - public category retrieval pending")
                    .build();

            responseObserver.onNext(response);
            responseObserver.onCompleted();

        } catch (Exception e) {
            logger.error("Error in getPublicCategory", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to get public category: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void getPublicItem(GetPublicItemRequest request, StreamObserver<ItemResponse> responseObserver) {
        logger.info("Menu service - getPublicItem called for ID: {}", request.getId());

        try {
            ItemResponse response = ItemResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Menu service not implemented yet - public item retrieval pending")
                    .build();

            responseObserver.onNext(response);
            responseObserver.onCompleted();

        } catch (Exception e) {
            logger.error("Error in getPublicItem", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to get public item: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    @Override
    public void searchMenuItems(SearchMenuItemsRequest request, StreamObserver<ListItemsResponse> responseObserver) {
        logger.info("Menu service - searchMenuItems called with query: {}", request.getQuery());

        try {
            ListItemsResponse response = ListItemsResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Menu service not implemented yet - menu item search pending")
                    .setTotalCount(0)
                    .setPage(request.getPage())
                    .setSize(request.getSize())
                    .build();

            responseObserver.onNext(response);
            responseObserver.onCompleted();

        } catch (Exception e) {
            logger.error("Error in searchMenuItems", e);
            responseObserver.onError(Status.INTERNAL
                    .withDescription("Failed to search menu items: " + e.getMessage())
                    .asRuntimeException());
        }
    }
}
